force-app/main/default/objects/Lead_Staging_Merge_Log__c/Lead_Staging_Merge_Log__c.object-meta.xml
<CustomObject>
    <label>Lead Staging Merge Log</label>
    <nameField>
        <label>Merge Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Staging Merge Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>