force-app/main/default/objects/Lead_Staging_Merge_Log__c/fields/Lead_Staging__c.field-meta.xml
<CustomField>
    <fullName>Lead_Staging__c</fullName>
    <label>Lead Staging</label>
    <referenceTo>Lead_Staging_Record__c</referenceTo>
    <relationshipLabel>Lead Staging Merge Logs</relationshipLabel>
    <relationshipName>Merge_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>