force-app/main/default/objects/Lead_Staging_Merge_Log__c/fields/Matching_Score__c.field-meta.xml
<CustomField>
    <fullName>Matching_Score__c</fullName>
    <label>Matching Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>