force-app/main/default/objects/Lead_Staging_Merge_Log__c/fields/Merged_Into_Account__c.field-meta.xml
<CustomField>
    <fullName>Merged_Into_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merged Into (Account)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Merge Logs</relationshipLabel>
    <relationshipName>Merge_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>