force-app/main/default/objects/Lead_Staging_Merge_Log__c/fields/Merged_Into_Lead__c.field-meta.xml
<CustomField>
    <fullName>Merged_Into_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merged Into (Lead)</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Merge Logs</relationshipLabel>
    <relationshipName>Merge_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>