force-app/main/default/objects/Lead_Staging_Merge_Log__c/fields/Number_of_Records_Merged__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Records_Merged__c</fullName>
    <label>Number of Records Merged</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>